--- a/SmartPointerDemo/SmartPointerDemo/SmartPointerDemo.vcxproj
+++ b/SmartPointerDemo/SmartPointerDemo/SmartPointerDemo.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="GenericPoolManager.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SmartPointer.h" />
+    <ClInclude Include="SmartPointerRefCount.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
