--- a/SmartPointerDemo/SmartPointerDemo/SmartPointerDemo.vcxproj.filters
+++ b/SmartPointerDemo/SmartPointerDemo/SmartPointerDemo.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="BLOBItem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SmartPointerRefCount.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
